--- a/python/pom.xml
+++ b/python/pom.xml
@@ -9,12 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>java</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>algorithms</module>
-        <module>leetcode</module>
-    </modules>
+    <artifactId>python</artifactId>
 
 
 </project>
